# NF1_organoid_cell_segmentation

./: MLproject  README.md  pyproject.toml  train.py
callbacks/: Callbacks.py
callbacks/utils/: SampleImages.py  SaveEpochSlices.py  SaveWholeSlices.py  image_padding_specs.py  save_utils.py
datasets/dataset_00/: CellSlicetoSliceDataset.py
datasets/dataset_00/utils/: GenericSliceSelector.py  ImagePostProcessor.py  ImagePreProcessor.py  ImageSelector.py  NonBlackSliceSelector.py  ZSliceSelector.py  image_metadata.py
datasets/dataset_01/: AllSlicesDataset.py
datasets/dataset_01/utils/: ImagePreProcessor.py  image_selection.py  image_slice_selection.py
metrics/: BCE.py  ConfusionMetrics.py  Dice.py
models/: UNet.py  UNetLayers.py  UnetLayers.py
splitters/: HashSplitter.py
trainers/: UNetTrainer.py
utils/: instance_to_semantic_segmentation.py
visualize_results/: convert_images.ipynb  view_images.sh
visualize_results/nbconverted/: convert_images.py
visualize_results_nviz/: convert_images.ipynb  convert_view_images.ipynb  view_images.sh
visualize_results_nviz/nbconverted/: convert_images.py  convert_view_images.py
