[project]
name = "nf1-organoid-cell-segmentation"
version = "0.1.0"
description = "Deep learning–based vision model for segmentation of cells within NF1 organoids."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "cityhash>=0.4.10",
    "cuda-python==12.9",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "mlflow>=3.4.0",
    "nbconvert>=7.16.6",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "pynvim>=0.6.0",
    "tifffile>=2025.10.4",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[project.scripts]
nf1-organoid-cell-segmentation = "nf1_organoid_cell_segmentation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "evaluate_performance",
    "evalutate_performance",
    "evaluate_model",
]
